-------------------------------------------------------------------------------
v5_5_12 (2012-10-23) -- DR10 release candidate

SJB 2012-10-23:
SPREDUCE2D: add photolog_version to log output
SPCOADD_V5: add EXTNAME keywords to spCFrame and spPlate files

JB 2012-10-22:
PLATEMERGE, SPREDUCE1D: Add CAS-styled specobjid to spreduce1d output

ASB 2012-10-20:
FLUX_DISTORTION, SPREDUCE1D: call SDSS_ASTROMBAD rather than looking
for CALIB_STATUS bit to flag bad fields.  (Ticket #1583).

MDO 2012-10-09:
SDSSPROC: add case to check if saturated pixel occurs within 3 pixels of top and bottom of image.  (Ticket $1424)

SJB 2012-10-09:
opfiles/washers.par: remove duplicate entry 3537-55116

-------------------------------------------------------------------------------
v5_5_11 (2012-10-04) -- dry run for DR10

ASB 2012-10-04:
PLATEMERGE: Added BOSSPRIMARY tag to replicate SPECPRIMARY but to be
    immune from downstream modification; changed SPECOBJ_ID to
    BOSS_SPECOBJ_ID (Ticket #1634).

SJB 2012-10-04:
COMBINE1FIBER: only set NODATA in AND_MASK if there really is no data
    on any input spectrum; resolves ticket 1301.

SJB 2012-10-03:
BATCHPBS: Added /skip1d option
Added bin/copy_spPlan.py

SJB 2012-10-02:
PLATEMERGE: removed Z_PERSON, CLASS_PERSON, Z_CONF_PERSON,
    COMMENTS_PERSON from spAll so that quasar catalogs can proceed on
    timescale indepdenent of pipeline.  DRxQ will be authoritative
    source of FPG scans rather than also propagating to spAll.
SPECTRO_SUMMARY: removed N_QSO_SCANNED, N_LYA_INCOMP, and N_LYA_IMPURE
    statistics.
 
PLATELIST: Change defult input/output location to be in RUN2D subdir
    to make it easier to work with multiple versions.  Can be overriden
    with TOPDIR and OUTDIR options, and multiple RUN2D versions can
    still be combined into a single platelist using RUN2D='*' or
    RUN2D=[x, y, z], in which case the platelist is written to
    $BOSS_SPECTRO_REDUX (not in the RUN2D subdir).
    Resolves ticket 1659.
