@@ -1,3 +1,5 @@
+SJB 2012-10-28: reformat_spectra.py - Added x column to exp HDUs of spec files.
+
 -------------------------------------------------------------------------------
 v5_5_12 (2012-10-23) -- DR10 release candidate
 
